configurando webpack para desarrollo

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
     </footer>
 
-    <script src="js/app.js" type="module"></script>
+    <script src="public/js/bundle.js"></script>
 
 </body>
 </html>
